sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
      if (!(plusPetit(i,(i+ecart)))) {
                      ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
      if (!(plusPetit(i,(i+ecart)))) {
                          ^AlgCombSort:15: error: type mismatch;
 found   : Double
 required: Int
        echange(i,(i+ecart))
                ^AlgCombSort:15: error: type mismatch;
 found   : Double
 required: Int
        echange(i,(i+ecart))
                    ^