sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart :Double = getNombreValeurs()
  var inv = true
  var i :Double = 0
  while ( ecart>=1 || inv ) {
    inv = false
    if (ecart>1) {
      ecart = ecart/(1.3)
    }
    ecart = (ecart.asInstanceOf[Double] / 1.3).asInstanceOf[Int]
    i = 0
    while ((i+ecart)<getNombreValeurs()) {
      if (!(plusPetit(i,(i+ecart)))) {
        echange(i,(i+ecart))
        i = i+1
        inv = true
      }
    }
  }
}